--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
+    <input type="file" id="input-button"></input>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <canvas id="myCanvas"></canvas>
         <canvas id="input"></canvas>
         <canvas id="output"></canvas>
         <script src="script.js" async defer></script>
